<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/white">

    <!-- Logo de la App -->
    <!--<ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/logo_description"
        android:layout_marginBottom="32dp" />
-->
    <!-- Título de Bienvenida -->
    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp" />

    <!-- Botón de Registro -->
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primaryColor"
        android:textColor="@color/white"
        android:padding="12dp" />

    <!-- Botón de Inicio de Sesión -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/secondaryColor"
        android:textColor="@color/white"
        android:padding="12dp" />

</LinearLayout>